# sftwr_ensg_2024

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  cmake_build.bat  cmake_script.bat  fououquoi  hello.cpp
.github/workflows/: CD.yml  CI.yml  multi_platform_CI.yml
cmake/: HelloProjConfig.cmake.in  HelloProjHardwareInfo.h.in
include/basic/: message.h
include/maths/: power.h
mains/: CMakeLists.txt  hello.cpp
src/basic/: CMakeLists.txt  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  basic.vcxproj  basic.vcxproj.filters  cmake_install.cmake  message.cpp
src/maths/: CMakeLists.txt  power.cpp
tests/: CTestTestfile.cmake  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_build.bat  cmake_install.cmake  test-version.cpp  test_hello.vcxproj  test_hello.vcxproj.filters  test_version.vcxproj  test_version.vcxproj.filters
